MGMT-7668: Move list supported operators V1 API to V2
