# swagger.yaml
@@ -5139,6 +5139,32 @@ paths:
           schema:
             $ref: '#/definitions/error'
 
+  /v2/supported-operators:
+    get:
+      tags:
+        - operators
+      operationId: V2ListSupportedOperators
+      description: Retrieves the list of supported operators.
+      responses:
+        "200":
+          description: Success.
+          schema:
+            type: array
+            items:
+              type: string
+        "401":
+          description: Unauthorized.
+          schema:
+            $ref: '#/definitions/infra_error'
+        "403":
+          description: Forbidden.
+          schema:
+            $ref: '#/definitions/infra_error'
+        "500":
+          description: Error.
+          schema:
+            $ref: '#/definitions/error'
+
   /v2/clusters/{cluster_id}/uploads/ingress-cert:
     post:
       tags:
